fix pr comments: replace padding-right with FlexContainer gap prop

--- a/airbyte-webapp/src/components/connection/ConnectionForm/FormFieldWrapper.module.scss
+++ b/airbyte-webapp/src/components/connection/ConnectionForm/FormFieldWrapper.module.scss
@@ -3,7 +3,6 @@
 .leftFieldCol {
   flex: 1;
   max-width: 640px;
-  padding-right: variables.$spacing-xl;
 }
 
 .rightFieldCol {
